LAB-K8S-10/solutions/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
  - name: http
    port: 80
