LAB-K8S-10/solutions/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: my-app-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: my-app-svc
          servicePort: 80
        path: /
